_includes/manuals/1.15/4.3.1_smartproxy_installation.md

A smart proxy is an autonomous web-based foreman component that is placed on a host performing a specific function in the host commissioning phase.
It receives requests from Foreman to perform operations that are required
during the commissioning process and executes them on its behalf. More details
can be found on the [**Foreman Architecture**](manuals/{{page.version}}/index.html#ForemanArchitecture) page.

To fully manage the commissioning process then a smart proxy will have to manipulate these services, DHCP, DNS, Puppet CA, Puppet and TFTP. These services may exist on separate machines or several of them may be hosted on the same machine. As each smart proxy instance is capable of managing all the of these services, there is only need for one proxy per host.
In the special case of a smart proxy managing a Windows DHCP server, the host machine must be running Windows, it does not need to be the Microsoft DHCP server itself.

#### Packages

RPM and Debian packages are available, see the [Install from Packages](manuals/{{page.version}}/index.html#3.3InstallFromPackages) section for configuration and install the `foreman-proxy` package.

#### Source code

You can get the latest stable code from [GitHub](https://github.com/theforeman/smart-proxy) ([via git](git://github.com/theforeman/smart-proxy.git)).

<pre>
git clone git://github.com/theforeman/smart-proxy.git -b {{page.version}}-stable
</pre>

#### System requirements

The smart proxy will run with the following requirements (aside from rubygem dependencies):

* Ruby 2.0, 2.1, 2.2, 2.3 or 2.4

#### Windows
The Microsoft smart-proxy installation procedure is very basic compared to the RPM or APT based solution. You need to run smart-proxy from the source as well as install Ruby and Ruby DevKit.

1. Run [Ruby Installer](http://rubyinstaller.org/downloads/) and add the matching DevKit to compile native extensions. Make sure to add Ruby to `%PATH%`, you can select this option in the installer
1. Download / clone the [smart proxy repository](https://github.com/theforeman/smart-proxy) to a convenient location (see above, _Source Code_). Make sure to download / checkout the maching branch to your foreman installation
1. Open a command prompt (`cmd.exe`) and run the following commands in order:
    1. `ruby <devKitRoot>\dk.rb init`
    1. `ruby <devKitRoot>\dk.rb install`
    1. `gem install --no-ri --no-rdoc bundler`
    1. `cd <smart-proxy location>`
    1. `bundle install --without development test krb5 puppet_proxy_legacy bmc libvirt`

##### General configuration
1. Create the SSL certificate and key
    1. Login to your puppetmaster
    1. On the command line, type the following command. Take care not to use an alias nor upper case characters.

           puppet cert generate new-smart-proxy-FQDN

    1. Copy the private key, the public certificate and the ca.pem from /var/lib/puppet/ssl on your puppetmaster over to a location accessible by your new smart proxy, e.g. `<smart-proxy location>\ssl\` (create the directory if necessary - this location will be referred to by the settings.yml in the next step)
1. Copy *settings.yml.example* inside *config* to *settings.yml*
1. At very least, modify the settings for `:bind_host:` and `:log_file:` and SSL, for example:

```
:bind_host: '0.0.0.0'
:log_file: 'C:\smart-proxy.log'

:trusted_hosts: [ foreman.example.com ]

:ssl_certificate: <smart-proxy location>\ssl\host.example.com.pem
:ssl_private_key: <smart-proxy location>\ssl\host.example.com.pem
:ssl_ca_file:     <smart-proxy location>\ssl\ca.pem

```

##### Test and configure smart proxy features
1. Test your configuration by setting `:log_level: DEBUG` and `:log_file: STDOUT` in *config/settings.yml*
1. Open an administrative command prompt and run `bundle exec ruby <smart-proxy location>\bin\smart-proxy`
1. [Configure smart-proxy features like DNS and DHCP](manuals/{{page.version}}/index.html#4.3.2SmartProxySettings)
1. Once everything runs well install a Windows service using `ruby extra\register-service.rb` to register the service `Foreman Smart Proxy`. Alternatively, use a third party tool like [NSSM](https://nssm.cc/) to create the service.

__Windows Service Note (domain user):__ 
1. The register-service.rb queries the user you are currently logged in with, and the syntax asking what user to run the service as can be confusing.  If you would like to create the service as a domain user, simply type in the domain\username, when it asks "Run this service as this user?"  You can also create the service as a local user, and change it to a different/domain user once the service has been created.
1. In order to use the service as a domain account, the domain user needs to be added to the local admin group, as well as enallow that user rights to "Log on as Service".  You may run into "Error 1053: "The service did not respond in a timely fashion", if these are not set correctly.

__Caveats:__ There is an issue with DevKit not finding any ruby version installed. Check that the DevKit and Ruby Installer are both x32 or x64, otherwise [add the missing versions manually by editing `config.yml`](https://github.com/oneclick/rubyinstaller/wiki/Development-Kit#4-run-installation-scripts).

__Puppet hint:__ If you have Puppet installed on the same host running smart-proxy, you can use Puppet's Ruby. You only need DevKit. In this case, just add directory containing `ruby.exe` to your path variable and add it to DevKit settings if necessary by editing DevKit's `config.yml`. Also, you might want to use Puppet's host certificates right away for smart proxy SSL connections. Usually, they can be found in `C:\ProgramData\PuppetLabs\puppet\etc\ssl`. For example:

```
:ssl_certificate: C:\ProgramData\PuppetLabs\puppet\etc\ssl\certs\host.example.com.pem
:ssl_private_key: C:\ProgramData\PuppetLabs\puppet\etc\ssl\private_keys\host.example.com.pem
:ssl_ca_file:     C:\ProgramData\PuppetLabs\puppet\etc\ssl\certs\ca.pem
```

#### Configuration file

Usually can be found at /etc/foreman-proxy/settings.yml or in the config/settings.yml subdirectory.
You can use the *settings.yml.example* file inside the *config* directory as a template for your own *settings.yml*.

Configuration of each subsystem is usually in /etc/foreman-proxy/settings.d/ or in the config/settings.d/ subdirectory.  If you don't plan to use one of the subsystems, please disable them in these configuration files. For more information see [**Smartproxy Configuration**](manuals/{{page.version}}/index.html#4.3.2SmartProxySettings).

#### Start the daemon

<pre>
bundle exec bin/smart-proxy
</pre>

Or if you installed it via a package simply start the foreman-proxy service.

<pre>
service foreman-proxy start
</pre>

#### Add the Smart Proxy to Foreman

* Go to Foreman, under *Infrastructure > Smart proxies*, click *New Proxy*
* Type in the Name for your Proxy and the URL of your Proxy, with the port used

For example:

* Name: Puppet-Proxy
* URL: http://puppet.your-domain.com:8443
